fix: devise customization 1
